<resources>
    <!-- about us-->
    <string name="about_us">Made by Nökkvi, Einar, Elísabet and Jón as a final project in
        course HBVRKII taught by Dr. Matthias Book. Any suggestions, bug reports are welcome, send us a
        line at elr13@hi.is
    </string>
    <!--ip tala -->
    <string name="ip_tala">http://192.168.1.102:8000</string>
    <!-- preference values-->
    <string name="preference_file_key">Preference Key</string>
    <string name="pref_isdriver">Is Driver</string>
    <string name="pref_isactive">Is Active</string>
    <string name="pref_mbstate">Message Box String</string>




    <string name="app_name">SkreppIs</string>
    <string name="action_settings">Settings</string>

    <string name="p_findride">Find Ride</string>
    <string name="p_becomedriver">Become Driver</string>
    <string name="p_becomedriver_smoking">Is smoking allowed in your car?</string>
    <string name="p_finddriver">Search Drivers</string>
    <string name="p_requestdriver">Post Request</string>

    <string name="d_findpassenger">Find Passenger</string>
    <string name="d_setzones">Set Zones</string>
    <string name="d_searchpassenger">Search Passengers</string>
    <string name="t_toggle_active">Toggle Active</string>

    <string name="menu_home">Home</string>
    <string name="menu_manageprofile">Manage Profile</string>
    <string name="menu_ridehistory">Ride History</string>
    <string name="menu_about">About App</string>
    <string name="menu_logout">Log Out</string>

    <string name="d_isActive">You Are Now Active. Passengers May Contact You For Rides.</string>
    <string name="d_notActive">You Are No Longer Active. Passengers Cannot Contact You.</string>
    <string name="l_password">You typed either the wrong password or username</string>

    <string name="d_dropZones">You have dropped your zones</string>

    <string name="test_text2">Would It Get Some Wind For The Sailboat. And Would It Get For It Is</string>
    <string name="test_text3">When Considering The Best Liked Cities On Earth, Paris Looms Large Among Them.</string>
    <string name="test_text4">It Could Be Franky, It Could Be Very Fresh And Cleann</string>
    <string name="test_text5">If You\'ve Never Been Kissed By A Lady Of Paris, You\'ve Never Been Kissed At All</string>
    <string name="test_text6">When A Gentleman Contemplates A Lady Of Paris, The Gentleman Is Apt To Exclaim: "Ooh La La," For The Ladies Of Paris Are Very Charming</string>
    <string name="test_text7">Please. It Was Trees.</string>

    <string-array name="test_spinner">
        <item>---</item>
        <item>Closed</item>
        <item>DriverActive</item>
        <item>DriverRequest</item>
        <item>PassengerWaiting</item>
        <item>PassengerCancels</item>
        <item>DriverDestination</item>
        <item>RequestSent</item>
        <item>RequestRejected</item>
        <item>RequestTimeout</item>
        <item>RequestSuccess</item>
        <item>DestEta</item>
        <item>DriverCancelsE</item>
        <item>DriverCancelsL</item>
        <item>YouCancelE</item>
        <item>YouCancelL</item>
        <item>Arrival</item>

    </string-array>

    <string name="request_driver">Request</string>

    <string name="mb_default">This is the default message. You should not be seeing this. If you do, it\'s entierly your fault!</string>
    <string name="mb_location_default">Heitasta, heitasta helvíti!!!</string>
    <string name="mb_passenger_default">Skrattinn Sjálfur</string>
    <string name="mb_driver_active">You are currently active.</string>
    <string name="mb_driver_request">You have a ride request from:</string>
    <string name="mb_driver_pickup">Your Passenger is waiting for you at:</string>
    <string name="mb_driver_cancel">Your Passenger has canceled the ride.</string>
    <string name="mb_driver_dest">Your destination is at:</string>

    <string name="mb_passenger_request">You have sent a ride request to:</string>
    <string name="mb_passenger_rejected">The driver has rejected your request.</string>
    <string name="mb_passenger_timeout">The driver did not respond to you request.</string>
    <string name="mb_passenger_pickup">The driver will pick you up in eta:</string>
    <string name="mb_passenger_dest">You will reach your destination in eta:</string>
    <string name="mb_passenger_dcancel">Your driver has canceled your ride!</string>
    <string name="mb_passenger_pcancel">You have canceled your ride.</string>
    <string name="mb_arrival">You have arrived at your destination!</string>

    <string name="mbb_accept">Accept</string>
    <string name="mbb_reject">Reject</string>
    <string name="mbb_ok">OK</string>
    <string name="mbb_rate">Rate</string>
    <string name="mbb_try_again">Try Another</string>
    <string name="mbb_cancel">Cancel</string>

    <string name="title_activity_findride">Find Ride</string>
    <string name="title_activity_findpassenger">Find Passenger</string>
    <string name="title_activity_ridehistory">Ride History</string>
    <string name="title_activity_manageprofile">Manage Profile</string>
    <string name="title_activity_about">About</string>

    <string name="debug_toggle_driver">Toggle Driver</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email or Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_only_numbers">You have to pick number of seats</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_facebook_login">Sign In With Facebook Account</string>
    <string name="title_activity_register">Sign in</string>

    <!-- Register Strings -->
    <string name="register_field_uname">*Username</string>
    <string name="register_field_email">*Email</string>
    <string name="register_field_cemail">*Confirm Email</string>
    <string name="register_field_password">*Password</string>
    <string name="register_field_pwretype">*Re-Type Password</string>
    <string name="register_field_fname">*First Name</string>
    <string name="register_field_lname">*Last Name</string>
    <string name="register_field_phone">Phone Number</string>
    <string name="register_field_profile">Profile</string>
    <string name="register_button">Register</string>

    <!-- Required field -->
    <string name="required_field_note">Fields marked with a \'*\' are required.</string>

    <!-- Find Driver Strings -->
    <string name="find_driver_location">*Where Are You Now?</string>
    <string name="find_driver_destination">*Where Do You Want To Go?</string>
    <string name="find_driver_pickup">*Where Do You Want To Be Picked Up?</string>
    <string name="find_driver_dropoff">*Where Do You Want To Be Dropped Off?</string>
    <string name="find_driver_numseats">How many seats do you need?</string>

    <string-array name="seat_number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="find_driver_zone">Search For Active Drivers In This Zone</string>

    <string name="find_passenger_zone">Search Passengers In This Zone</string>

    <string name="become_driver_seats"> How many passenger seats are in your car?</string>

    <string name="drop_zone">Select zone to drop from your route</string>

    <string name="add_zone">Select zone to add to your route</string>


    <string-array name="zone">
        <item>Rvk, City Centre</item>
        <item>Rvk, Vesturbær</item>
        <item>Rvk, Hlíðar</item>
        <item>Rvk, Laugardalur</item>
        <item>Rvk, Háaleiti</item>
        <item>Rvk, Efra Breiðholt</item>
        <item>Rvk, Neðra Breiðholt</item>
        <item>Rvk, Fossvogur</item>
        <item>Rvk, Árbær</item>
        <item>Rvk, Grafarvogur</item>
        <item>Rvk, Kjalarnes</item>
        <item>Rvk, Grafarholt</item>
        <item>Hafnarfjörður</item>
        <item>Kópavogur</item>
        <item>Garðabær</item>
        <item>Seltjarnarnes</item>
        <item>Mosfellsbær</item>

    </string-array>

    <!-- Manage Profile -->

    <string name="man_profile_email">Email:</string>
    <string name="man_profile_unamme">Username:</string>
    <string name="man_profile_firstname">First Name:</string>
    <string name="man_profile_lastname">Last Name:</string>
    <string name="man_profile_phonenr">Phone Number:</string>
    <string name="man_profile_userprofile">Profile:</string>

    <string name="man_smoking_allowed">Smoking Allowed</string>
    <string name="man_smoking_banned">No Smoking</string>

    <string name="btn_change">Change</string>
    <string name="btn_save">Save</string>
    <string name="btn_change_passw">Change Password</string>
    <string name="btn_become_driver">Become Driver</string>
    <string name="btn_new_pw">Save Password</string>
    <string name="btn_forgot_pw">Forgot Password?</string>

    <string name="man_dprofile_maxseats">Max Seats Available</string>
    <string name="man_dprofile_smoking">Smoking Allowed</string>
    <string name="man_dprofile_carprofile">Car Information</string>

    <string name="man_profile_oldpw">Previous Password:</string>
    <string name="man_profile_newpw">New Password:</string>
    <string name="man_profile_reppw">Repeat New Password:</string>
    <string name="man_profile_forgotpw">Sucks To Be You!</string>


    <!-- Post Ride Request -->

    <string name="post_ride_request_start">Where are you?</string>
    <string name="post_ride_request_end">Where do you want to go?</string>

    <string name="btn_accept">Accept</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
