<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.app.skreppis.skreppis.MainActivity">
    <item
        android:id="@+id/menu_manageprofile"
        android:orderInCategory="100"
        android:title="@string/menu_manageprofile"
        android:showAsAction="never"/>
    <item
        android:id="@+id/menu_ridehistory"
        android:orderInCategory="101"
        android:title="@string/menu_ridehistory"
        android:showAsAction="never"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="102"
        android:title="@string/menu_about"
        android:showAsAction="never"/>
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="101"
        android:title="@string/menu_ridehistory"
        android:showAsAction="never"/>

</menu>