<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_driver_search_criteria"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.skreppis.skreppis.PostRideRequestActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/required_field_note"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/driver_search_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/find_driver_location"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/driver_search_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/find_driver_destination"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_driver_numseats"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/find_ride_seatspinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/seat_number"
        android:prompt="@string/find_driver_numseats" />

    <Button
        android:id="@+id/driver_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send Request"/>

</LinearLayout>
