<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_driver_search_criteria"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.skreppis.skreppis.PostRideRequestActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/required_field_note"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_driver_zone"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/find_ride_zonespinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/zone"
        android:prompt="@string/find_driver_zone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_driver_numseats"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/find_ride_seatspinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/seat_number"
        android:prompt="@string/find_driver_numseats" />

    <Button
        android:id="@+id/driver_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/driverList"
    />

</LinearLayout>
